nosql/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: node
  name: node
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: node
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/nosql_graph: "true"
        io.kompose.service: node
    spec:
      containers:
      - args:
        - -s -g
        image: datastax/dse-server:6.8.1
        imagePullPolicy: ""
        name: node
        resources: {}
        securityContext:
          capabilities:
            add:
            - IPC_LOCK
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
