nosql/seed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: seed
  name: seed
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: seed
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/nosql_graph: "true"
        io.kompose.service: seed
    spec:
      containers:
      - args:
        - -s -g
        image: datastax/dse-server:6.8.1
        imagePullPolicy: ""
        name: seed
        ports:
        - containerPort: 9042
        resources: {}
        securityContext:
          capabilities:
            add:
            - IPC_LOCK
        volumeMounts:
        - mountPath: /var/lib/cassandra
          name: seed-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: seed-claim0
        persistentVolumeClaim:
          claimName: seed-claim0
status: {}
