nosql/nosql_graph-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: nosql_graph
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/nosql_graph: "true"
  podSelector:
    matchLabels:
      io.kompose.network/nosql_graph: "true"
